--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,31 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-pydantic==2.4.2
-python-dotenv==1.0.0
-pytest==7.4.3
-httpx==0.25.1
-sqlalchemy==2.0.36
-psycopg2-binary==2.9.10
 alembic==1.13.3
+annotated-types==0.7.0
+anyio==3.7.1
+asyncpg==0.30.0
+awslambdaric==2.2.1
+certifi==2024.8.30
+click==8.1.7
+fastapi==0.104.1
+greenlet==3.1.1
+h11==0.14.0
+httpcore==1.0.6
+httpx==0.25.1
+idna==3.10
+iniconfig==2.0.0
+Mako==1.3.6
+mangum==0.19.0
+MarkupSafe==3.0.2
+packaging==24.1
+pluggy==1.5.0
+psycopg2-binary==2.9.10
+pydantic==2.4.2
+pydantic_core==2.10.1
+pytest==7.4.3
 pytest-asyncio==0.21.1
+python-dotenv==1.0.0
+simplejson==3.19.3
+sniffio==1.3.1
+SQLAlchemy==2.0.36
+starlette==0.27.0
+typing_extensions==4.12.2
+uvicorn==0.24.0
